<resources>
    <string name="app_name">COVID News</string>
    <string name="title_home">首页</string>
    <string name="title_epidemic">疫情</string>
    <string name="title_user">用户</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_scholars">学者</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="covid_19_knowledge_graph">融合多个开放知识图谱，帮助战胜新冠肺炎</string>
    <string name="covid_19_knowledge_graph_title">COVID-19 知识图谱</string>
    <string name="search_hint">搜索</string>
    <string name="sample_description">Sample description</string>
    <string name="sampel_label">Sampel Label</string>
    <string name="relations">关系</string>
    <string name="properties">属性</string>
    <string name="entity">实体</string>
    <string name="search">搜索</string>
    <string name="history">历史记录</string>
    <string name="choose_catalog">选择分类</string>
    <string name="query">查询</string>
    <string name="clear_history">清除历史记录</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about">关于</string>
    <string name="entity_content_text">为了对抗新型冠状病毒（COVID-19）,全世界的科研人员、医疗人员、政府工作人员和公众渴望获得开放、全面的新冠知识。我们收集整理了现有COVID-19开放知识图谱，并进一步融合了它们，构建了一个大规模、结构化新冠知识图谱(COKG-19)。目前，COKG-19包含了505个概念、393个属性、26282个实例和32352个知识三元组，覆盖了医疗、健康、物资、防控、科研和人物等。此外，COKG-19是一个中英文双语知识图谱。
      \n COKG-19旨在帮助发布者和科研人员识别和链接文本中的语义知识，并提供更多智能服务和应用。我们将融合更多的开放知识，以不断更新COKG-19。</string>
    <string name="Country_Province">province.json</string>
    <string name="Province_County">county.json</string>


    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>

    <!-- 分享成功失败的 Toast -->
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    <string name="weibosdk_demo_toast_share_response_args_success">收到微博发起的请求成功</string>
    <string name="weibosdk_demo_toast_share_response_args_failed">收到客户端请求消息失败</string>
    <string name="about_text">清华大学计算机系 2020 Java 课程大作业\n\n数据内容来自 https://covid-19.aminer.cn\n\n项目作者\nhttps://github.com/tth135\nhttps://github.com/Ysanity\n\nLicense\n\nCopyright © 2020 www.taotianhua.com\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n\n更多信息请关注项目代码主页\nhttps://github.com/tth135/COVID-19-THU-NEWS</string>
    <string name="recm_text">推荐安装微博客户端</string>
</resources>